# 3DDP

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements.txt
configs/: default.yaml
extensions/: augment.py
extensions/point_transformer/: point_transformer.py  transformer_block.py
extensions/pointnet/: dgcnn.py  pointconv.py  pointconv_util.py  pointnet_dataloader.py  pointnet_model.py  pointnet_model_wobn.py  pointnetpp_model.py  pointnetpp_util.py
extensions/pointops/: setup.py
extensions/pointops/src/: build.ninja
extensions/pointops/src/ballquery/: ballquery_cuda.cpp
extensions/pointops/src/featuredistribute/: featuredistribute_cuda.cpp
extensions/pointops/src/grouping/: grouping_cuda.cpp
extensions/pointops/src/grouping_int/: grouping_int_cuda.cpp
extensions/pointops/src/interpolation/: interpolation_cuda.cpp
extensions/pointops/src/knnquery/: knnquery_cuda.cpp
extensions/pointops/src/knnquery_heap/: knnquery_heap_cuda.cpp
extensions/pointops/src/labelstat/: labelstat_cuda.cpp
extensions/pointops/src/sampling/: sampling_cuda.cpp
scripts/: run_table1.sh  train.py
src/point_distill/data/: datasets.py
src/point_distill/distill/: losses.py
src/point_distill/models/: factory.py
src/point_distill/ops/: pc_ops.py  training.py
