[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "point-distill"
version = "0.1.0"
description = "Parameterization-Based Dataset Distillation of 3D Point Clouds"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
